--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -5,4 +5,25 @@
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    padding: 2rem;
+}
+
+.navlinks1 {
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+}
+
+.brand {
+    color: black;
+    font-weight: 600;
+    font-size: 3rem;
+}
+
+.anchor1 {
+    color: black;
+    text-decoration: none;
+    font-weight: 600;
+    font-size: 3rem;
+    letter-spacing: 0.6rem;
 }
