--- a/src/components/items/Contact.css
+++ b/src/components/items/Contact.css
@@ -1,7 +1,8 @@
 .contactContainer {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    gap: 2rem;
+    gap: 0.5rem;
+    margin-top: 4rem;
 }
 
 .contactLeft {
@@ -28,6 +29,7 @@
     display: flex;
     justify-content: center;
     width: 80%;
+    max-width: 650px;
 }
 
 .formDiv {
@@ -36,8 +38,34 @@
     width: 100%;
 }
 
+.formDiv > label {
+    margin-bottom: 0.5rem;
+}
+
 .formDiv > input {
-    padding-bottom: 1rem;
+    margin-bottom: 3rem;
+    padding: 0.8rem;
+    border: 2px solid black;
+}
+
+.formDiv > textarea {
+    margin-bottom: 3rem;
+    padding: 0.8rem;
+    border: 2px solid black;
+}
+
+.contactBtn {
+    padding: 1rem;
+    margin-bottom: 1rem;
+    background-color: black;
+    color: white;
+    font-weight: 700;
+}
+
+.contactBtn:hover {
+    background-color: white;
+    color: black;
+    border: 2px solid black;
 }
 
 @media screen and (max-width: 1200px) {
@@ -65,6 +93,7 @@
     .flowerDiv {
         background-color: black;
         padding: 2rem;
+        height: 25rem;
     }
 }
 
@@ -73,9 +102,21 @@
         display: flex;
         flex-direction: column;
         border: 1px solid black;
+        margin-top: 0rem;
     }
 
     .flowerDiv {
         display: none;
+    }
+
+    .contactRight {
+        display: flex;
+        width: 100%;
+    }
+
+    .formDiv {
+        display: flex;
+        flex-direction: column;
+        width: 90%;
     }
 }
