Adjusting the services cards

--- a/src/components/Main.css
+++ b/src/components/Main.css
@@ -1,10 +1,13 @@
 .mainContainer {
-    padding: 2rem;
+    padding-top: 2rem;
 }
 
 .navSet {
     display: flex;
     justify-content: space-between;
+    padding-left: 2rem;
+    padding-right: 2rem;
+    padding-bottom: 2rem;
 }
 
 .navItems {
