--- a/src/components/Main.css
+++ b/src/components/Main.css
@@ -57,7 +57,8 @@
     display: flex;
     flex-direction: row;
     align-items: flex-end;
-    gap: 0.25rem;
+    justify-content: space-around;
+    padding: 3rem;
 }
 
 @media screen and (max-width: 600px) {
