Added basic Auth0 interface

--- a/src/components/Main.css
+++ b/src/components/Main.css
@@ -61,6 +61,11 @@
     padding: 3rem;
 }
 
+.loginDiv {
+    border: 1px solid black;
+    display: flex;
+}
+
 @media screen and (max-width: 600px) {
     .mainContainer {
         padding: 0
